--- a/src/layouts/pages/Home.astro
+++ b/src/layouts/pages/Home.astro
@@ -56,8 +56,8 @@ const t = useTranslation(lang);
       </div>
     </div>
     <FullWidthBlock withContainer class="bg-slate-200 py-16 dark:bg-slate-900 xl:py-32">
-      <div class="gap-8 md:grid md:grid-cols-2">
-        <div class="prose dark:prose-invert xl:prose-lg">
+      <div class="space-y-8 md:space-y-12">
+        <div class="prose mx-auto dark:prose-invert xl:prose-lg">
           <slot name="testimonials" />
         </div>
         <div class="mt-8 lg:mt-0">
