--- a/src/pages/en/index.astro
+++ b/src/pages/en/index.astro
@@ -42,7 +42,7 @@ const urls = {
   </Fragment>
 
   <Fragment slot="testimonials">
-    <h2>Testimonials</h2>
+    <h2 class="text-center">Testimonials</h2>
     <p>
       Working with diferent teams and people, I've had the opportunity to learn a lot from them. Here are some of the
       things they've said about me.
