--- a/src/pages/es/index.astro
+++ b/src/pages/es/index.astro
@@ -45,7 +45,7 @@ const urls = {
   </Fragment>
 
   <Fragment slot="testimonials">
-    <h2>¿Qué dicen?</h2>
+    <h2 class="text-center">¿Qué dicen?</h2>
     <p>
       Trabajar con diferentes equipos y personas, me ha dado la oportunidad de aprender mucho de ellos, y estoy más que
       agradgecido por eso. Aquí hay algunas de las cosas que han dicho sobre mi.
