--- a/src/components/layout/MinimalHeader.astro
+++ b/src/components/layout/MinimalHeader.astro
@@ -1,6 +1,4 @@
 ---
-import { Image } from "astro:assets";
-import logo from "@/assets/brand/logo-REPLACE.svg";
 import { DEFAULT_LOCALE, getLocalizedPage, useTranslation, type Language } from "@/utils/i18n";
 
 interface Props {
@@ -14,16 +12,12 @@ const t = useTranslation(lang);
 <header class="relative top-0 z-40 w-full bg-slate-50 shadow-md dark:bg-gray-900">
   <div class="mx-auto max-w-7xl px-2 sm:border-none sm:px-6 lg:px-8">
     <div class="relative flex h-20 items-center justify-between">
-      <a href={getLocalizedPage(lang, "home")}>
-        <span class="sr-only">Misael Taveras</span>
-        <Image
-          class="block h-8 w-auto"
-          alt="Misael Taveras Logo"
-          aria-hidden={true}
-          src={logo.src}
-          width={logo.width}
-          height={logo.height}
-        />
+      <a
+        class="font-mono text-lg font-extralight text-slate-600 dark:text-slate-200"
+        href={getLocalizedPage(lang, "home")}
+      >
+        <span aria-hidden="true">&lt;<span class="text-slate-900 dark:text-blue-100">TaverasMisael</span> /&gt;</span>
+        <span class="sr-only">{t("navigation", "go_home")}</span>
       </a>
       <div class="absolute inset-y-0 right-0 flex items-center pr-2">
         <button class="rounded-full p-2 hover:bg-blue-100/40 dark:hover:bg-gray-700/40 dark:hover:text-white">
