--- a/src/pages/es/index.astro
+++ b/src/pages/es/index.astro
@@ -14,22 +14,19 @@ const urls = {
 
 <HomeLayout lang={lang} featuredPostSlug="es/10-consejos-que-yo-deberia-seguir">
   <Fragment slot="jumbotron">
-    <h2 class="mb-8 text-5xl tracking-wide md:text-6xl lg:text-8xl">Hola 👋🏽</h2>
-    <div class="max-w-lg">
-      <p class="mb-6">
-        Mi nombre es <strong class="font-semibold text-slate-950 dark:text-white">Misael Taveras</strong>, y soy un
-        ingeniero frontend de República Dominicana.
-      </p>
-      <p class="mb-12">
-        Me encanta trabajar con <span class="font-semibold">React</span>, <span class="font-semibold">TypeScript</span>,
-        y <span class="font-semibold">Node</span>.
-      </p>
-      <p>
-        Puedes saber <a href={urls.about} class="font-semibold text-slate-950 underline dark:text-white" rel="prefetch"
-          >más sobre mi aquí</a
-        >.
-      </p>
-    </div>
+    <p class="mb-4 text-3xl tracking-wide md:mb-6 md:text-5xl md:leading-snug">
+      Hola, soy <span class="text-blue-900 dark:text-blue-50">Misael Taveras</span>
+    </p>
+    <p class="mb-2 md:mb-4">Soy un <span>FrontEnd Engineer</span> de República Dominicana.</p>
+    <p class="mb-4 md:mb-6">
+      Me encanta trabajar con <span class="font-semibold">React</span>, <span class="font-semibold">TypeScript</span>,
+      and <span class="font-semibold">Node</span>.
+    </p>
+    <p>
+      Conoce más <a href={urls.about} class="font-semibold text-slate-950 underline dark:text-white" rel="prefetch"
+        >sobre mí aquí
+      </a>.
+    </p>
   </Fragment>
 
   <Fragment slot="blog">
