add size to profile image to avoid layout shifting

--- a/src/layouts/pages/Home.astro
+++ b/src/layouts/pages/Home.astro
@@ -40,9 +40,11 @@ const t = useTranslation(lang);
         <div class="lg:col-span-2"><slot name="jumbotron" /></div>
         <div class="w-fit justify-self-center rounded-xl bg-blue-800/90 shadow-sm hover:shadow-md">
           <Image
-            src={ProfilePic}
             alt=""
-            class="block w-full max-w-sm rotate-3 rounded-md transition-transform hover:rotate-0 hover:scale-95 hover:rounded-lg md:w-full md:max-w-md"
+            src={ProfilePic}
+            width={500}
+            height={500}
+            class="md:max-full block w-52 max-w-full rotate-3 rounded-md transition-transform hover:rotate-0 hover:scale-95 hover:rounded-lg sm:w-72 md:w-96"
           />
         </div>
       </div>
