--- a/src/pages/[lang]/blog/index.astro
+++ b/src/pages/[lang]/blog/index.astro
@@ -38,6 +38,7 @@ const t = useTranslation(lang);
 <Layout
   lang={lang}
   canonical={canonical}
+  ogType="blog"
   translations={translations}
   title={t("navigation", "blog")}
   description={t("page_descriptions", "blog")}
