add favicon, twitter opengraph and theme-color

--- a/src/components/layout/OpenGraphTags.astro
+++ b/src/components/layout/OpenGraphTags.astro
@@ -18,7 +18,15 @@ const { description, image, lang, title, type, url } = Astro.props;
 <meta property="og:title" content={title} />
 <meta property="og:description" content={description} />
 <meta property="og:image" content={image} />
+<meta property="og:image:alt" content={image} />
 <meta property="og:url" content={url} />
 <meta property="og:type" content={type} />
 <meta property="og:locale" content={lang} />
 <meta property="og:site_name" content="Taveras Misael" />
+
+<meta name="twitter:card" content="summary_large_image" />
+<meta name="twitter:site" content="astrodotbuild" />
+<meta name="twitter:title" content={title} />
+<meta name="twitter:description" content={description} />
+<meta name="twitter:image" content={image} />
+<meta name="twitter:image:alt" content="" />
