--- a/src/layouts/Basic.astro
+++ b/src/layouts/Basic.astro
@@ -31,6 +31,7 @@ const image = propsImage ?? slugToCanonical(`/default-og-${lang}.png`);
     <meta name="viewport" content="width=device-width" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <link rel="alternate icon" type="image/x-icon" href="/favicon.ico" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
     <meta name="theme-color" content="hsl(228, 84%, 5%)" media="(prefers-color-scheme: dark)" />
     <meta name="theme-color" content="hsl(0, 0, 100%)" media="(prefers-color-scheme: light)" />
     <meta name="docsearch:language" content={lang} />
