--- a/src/layouts/WithHeader.astro
+++ b/src/layouts/WithHeader.astro
@@ -2,7 +2,6 @@
 import Basic from "./Basic.astro";
 
 import Header from "@/components/layout/Header.astro";
-import Footer from "@/components/layout/Footer.astro";
 import { DEFAULT_LOCALE } from "@/utils/i18n";
 import type { DefaultLayoutProps } from "./types";
 
@@ -15,6 +14,7 @@ const {
   canonical,
   image,
   ogType,
+  translations,
   lang = DEFAULT_LOCALE,
   class: className,
   ["class:list"]: classList,
@@ -30,6 +30,7 @@ const {
   fullHeight={fullHeight}
   image={image}
   ogType={ogType}
+  translations={translations}
 >
   <Fragment slot="head">
     <slot name="head" />
@@ -38,5 +39,4 @@ const {
   <!-- This is a hack to prevent the header from overlapping the content -->
   <div aria-hidden="true" class="h-20"></div>
   <slot />
-  <Footer lang={lang} />
 </Basic>
