--- a/src/layouts/WithMiniHeader.astro
+++ b/src/layouts/WithMiniHeader.astro
@@ -2,7 +2,6 @@
 import Basic from "./Basic.astro";
 
 import Header from "@/components/layout/MinimalHeader.astro";
-import Footer from "@/components/layout/Footer.astro";
 import { DEFAULT_LOCALE } from "@/utils/i18n";
 import type { DefaultLayoutProps } from "./types";
 
@@ -15,6 +14,7 @@ const {
   canonical,
   image,
   ogType,
+  translations,
   lang = DEFAULT_LOCALE,
   class: className,
   ["class:list"]: classList,
@@ -30,12 +30,11 @@ const {
   fullHeight={fullHeight}
   image={image}
   ogType={ogType}
+  translations={translations}
 >
   <Fragment slot="head">
     <slot name="head" />
   </Fragment>
   <Header lang={lang} />
-  <!-- This is a hack to prevent the header from overlapping the content -->
   <slot />
-  <Footer lang={lang} />
 </Basic>
