--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -25,6 +25,7 @@ const canonical = slugToCanonical("/404");
 ---
 
 <Layout
+  translations={[]}
   fullHeight
   canonical={canonical}
   lang={lang}
