--- a/src/components/layout/Footer.astro
+++ b/src/components/layout/Footer.astro
@@ -51,8 +51,8 @@ const translations = propTranslations.concat(currentLanguage);
 <footer
   class="mx-auto mt-8 w-full max-w-7xl border-t border-slate-200/50 px-2 py-6 text-center dark:border-slate-700/50 sm:px-6 sm:text-left"
 >
-  <div class="flex items-center justify-between pb-6">
-    <ThemeSelector client:visible />
+  <div class="flex items-center justify-center gap-4 pb-6 sm:justify-between">
+    <ThemeSelector lang={lang} client:visible />
     <LanguageSelector lang={lang} options={translations} value={currentLanguage} client:visible />
   </div>
   <div class="text-xs">
